--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ target
 *.njsproj
 *.sln
 *.sw?
+/spec
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
