--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ rmcp = { version="0.5.0", features = [
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+uuid = { version = "1.18.0", features = ["v4"] }
